--- a/fuzzydateformatter/src/main/AndroidManifest.xml
+++ b/fuzzydateformatter/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="si.virag.fuzzydateformatter">
+    package="com.andhradroid.fuzzydateformatter">
 
     <!-- Libraries have no manifest -->
 
